# my-gh-actions-playground

./: .release-please-manifest.json  Cargo.toml  cliff.toml  release-please-config.json  release-plz.toml  rust-toolchain.toml
.github/: pr_greetings.md
.github/actions/conv-commits/: README.md  action.yml  bot.ps1
.github/actions/crates-publish/: README.md  action.yml  do-publish.ps1
.github/actions/pr-greetings/: README.md  action.yml  bot.ps1  run.ps1
.github/actions/release-plz/: README.md  action.yml
.github/workflows/: ci.yml  conv-commits.yml  greetings.yml  release-crates.yml  release-please.yml
crates/publish-test-a-60e894818a/: CHANGELOG.md  Cargo.toml
crates/publish-test-a-60e894818a/src/: lib.rs
crates/publish-test-b-4347e0f632/: CHANGELOG.md  Cargo.toml
crates/publish-test-b-4347e0f632/src/: lib.rs
